--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-<div class="content fill-space">
+<div class="content fill-space" style="background-color:lightblue">
   <img class="grow-2 page-img" src="/static/css/img/workout.jpg">
   <div class="subcontent center-vertical">
     <h4 class="center">Login</h4>
@@ -36,6 +36,6 @@
 
     </form>
   </div>
-
+  <img class="grow-2 page-img" src="/static/css/img/workout2.jpg">
 </div>
 {% endblock %}
