--- a/App/static/css/styles.css
+++ b/App/static/css/styles.css
@@ -1,54 +1,55 @@
 :root{
-    --background: #DAD7CD;
-    --secondary: #A3B18A;
-    --tertiary: #588157;
-    --primary: #3A5A40;
-    --alert: #344E41;
+  --background: #0D1B2A;
+  --secondary: #1B263B;
+  --tertiary: #415A77;
+  --primary: #778DA9;
+  --alert: #A8DADC;
 }
 
 .fill-space{
-    min-height: 80%;
+  min-height: 100vh;
 }
 
-
-.grow-2{
-    grid-column: span 2 
+.logo {
+  width: 50px;
+  height: auto;
+  margin-right: 10px;
 }
+
 nav,
 footer{
-    background-color: var(--secondary);
-    color: white;
+  background-color: var(--secondary);
+  color: var(--tertiary);
 }
 
 #alert {
-    position: relative;
-    padding: 1em;
-    color: white;
+  position: relative;
+  padding: 1em;
+  color: var(--tertiary);
 }
 
 #close {
-    position: absolute;
-    top: 1px;
-    right: 10px;
-    color: white;
-    font-size: 1.5em;
-    text-decoration: none;
+  position: absolute;
+  top: 1px;
+  right: 10px;
+  color: var(--tertiary);
+  font-size: 1.5em;
+  text-decoration: none;
 }
 
 #close:hover {
-    cursor: pointer;
-    /* change the cursor to a pointer on hover */
+  cursor: pointer;
 }
 
 .content-wrapper {
-    background-color: var(--secondary);
+  background-color: var(--secondary);
 }
 
 .content{
-    display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 4fr 4fr 4fr;
-    min-height: 80%;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  min-height: 100vh;
 }
 
 .justify-content{
@@ -56,95 +57,95 @@ footer{
   justify-content: center;
 }
 
-
-
 .page-img{
-    padding: 0px;
-    margin: 0px;
-    width: 100%;
-    height:100%;
-    object-fit: fill;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .list-container {
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    max-height: 200px;
-    overflow-y: scroll;
-    padding: 10px;
-  }
+  border: 2px solid var(--tertiary);
+  border-radius: 5px;
+  max-height: 200px;
+  overflow-y: auto;
+  padding: 10px;
+}
 
-  .list-item {
-    font-size: 18px;
-    padding: 5px 10px;
-    margin-bottom: 5px;
-    background-color: #f2f2f2;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
+.list-item {
+  font-size: 18px;
+  padding: 5px 10px;
+  margin-bottom: 5px;
+  background-color: var(--primary);
+  border: 1px solid var(--tertiary);
+  border-radius: 3px;
+  color: var(--tertiary);
+}
 
-  .list-item:last-child {
-    margin-bottom: 0;
-  }
-  .selected-pokemon{
-    margin-left: 1.5em;
-    margin-top: 2em;
-  }
+.list-item:last-child {
+  margin-bottom: 0;
+}
 
-  .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-  }
+.selected-workout{
+  margin-left: 1.5em;
+  margin-top: 2em;
+}
 
-  .card {
-    display: flex;
-    flex-direction: column;
-    border: 1px solid #ddd;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin: 10px;
-    width: 300px;
-  
-  }
-  .card img {
-    width: 100%;
-    height: auto;
-  }
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
 
-  .card-content {
-    padding: 20px;
-  }
+.card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--primary);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 10px;
+  width: 300px;
+}
 
-  .card-content h3 {
-    margin: 0;
-  }
+.card img {
+  width: 100%;
+  height: auto;
+}
 
-  .close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close-btn:hover,
-  .close-btn:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.card-content {
+  padding: 20px;
+}
 
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  .container {
-    padding: 2px 16px;
-  }
+.card-content h3 {
+  margin: 0;
+}
 
-  .center-vertical{
-    margin-top: auto;
-    margin-bottom: auto;
-  }
+.close-btn {
+  color: var(--primary);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  color: var(--tertiary);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+
+.center-vertical{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 
