--- a/App/templates/signup.html
+++ b/App/templates/signup.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div class="content fill-space">
+<div class="content fill-space" style="background-color:lightblue">
   <img class="grow-2 page-img" src="/static/css/img/workout1.jpeg">
   <div class="subcontent center-vertical">
     <h4 class="center">Sign Up</h4>
@@ -52,5 +52,6 @@
   
     </form>
   </div>
+  <img class="grow-2 page-img" src="/static/css/img/workout3.jpg">
 </div>
 {% endblock %}
